[package]
name = "wayfare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
#ratatui = "0.26.2"
sqlparser = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
chrono = "0.4.38"
petgraph = "0.6.0"
anyhow = "1.0.83"
